# retune

./: README.md  package.json  pnpm-lock.yaml
templates/: README.md
web/app/: .nuxtignore  README.md  app.config.ts  app.vue  env.d.ts  histoire.config.ts  nuxt.config.ts  package.json  plopfile.js  routes.d.ts  tailwind.config.js
web/app/.railroad/: nuxt-config.ts
web/app/.railroad/templates/: about.md
web/app/assets/: css.css  tailwind.css
web/app/assets/theme/: dark.css  light.css
web/app/composables/: use-windows.ts
web/app/icons/: PausePlayIcon.vue  PlayPauseIcon.vue
web/app/routes/: index.vue  player.vue
web/app/services/: query-client.ts
web/app/src-tauri/: Cargo.toml  tauri.conf.json
web/app/src-tauri/capabilities/: main.json
web/app/src-tauri/src/: lib.rs  main.rs
web/app/stores/: use-playback-store.ts  use-sidebar-store.ts  use-titlebar-store.ts
web/app/types/: sidebar.types.ts  titlebar.types.ts
web/app/utils/: satisfies-as.ts  windows-platform.ts
web/base/: app.vue  nuxt.config.ts  package.json  tsconfig.json
web/base/composables/: device.ts
web/base/utils/: xstate-store.ts  xstate-vue.ts  xstate.ts
web/lib/: README.md  app.config.ts  package.json
web/page/: .eslintrc  .nuxtignore  README.md  package.json
web/widgets/: README.md  env.d.ts  histoire.config.ts  histoire.setup.ts  nuxt.config.ts  package.json  tsconfig.json  tw.ts
web/widgets/components/: TestStory.story.vue
web/widgets/composables/: alert-dialog-context.ts
web/widgets/utils/: tailwind.axis.ts  tailwind.colors.ts  tailwind.size.ts
(+52 files in other folders)
