[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.15", features = [] }
sea-orm = { version = "0.12.15", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "mock",
] }
tokio = { version = "1.37.0", features = ["full"] }
miette = { version = "7.2.0", features = ["fancy"] }
dotenvy = "0.15.7"
maplit = "1.0.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
window-vibrancy = "0.5.0"
